feat: very, very crude and basic start to vite library mode
exploring making a component library

--- a/solution/backend/regulations/templates/regulations/partials/recent_changes.html
+++ b/solution/backend/regulations/templates/regulations/partials/recent_changes.html
@@ -4,6 +4,8 @@
 
     <h3>Recent Rules</h3>
 
+    <test-component></test-component>
+
     <p class="recent-rules-descriptive-text">Includes 42 CFR 400, 430-460</p>
 
     <recent-changes-container api-url={% url "regcore" %} ></recent-changes-container>
