--- a/solution/backend/regulations/templates/regulations/regulation_landing.html
+++ b/solution/backend/regulations/templates/regulations/regulation_landing.html
@@ -30,5 +30,6 @@
 {% endblock %}
 
 {% block post_footer %}
-    <script src="{% static '/js/main.build.js' %}"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vue@2.7.14"></script>
+    <script src="{% static '/js/eregs-main.iife.js' %}"></script>
 {% endblock %}
