--- a/solution/ui/regulations/css/scss/partials/_supplemental_content.scss
+++ b/solution/ui/regulations/css/scss/partials/_supplemental_content.scss
@@ -138,6 +138,7 @@
         color: $primary_link_color;
         text-decoration: none;
         font-size: $font-size-sm;
+        padding-bottom: 20px;
     }
 
     .supplemental-content-external-link {
