--- a/solution/ui/regulations/css/scss/partials/_jump_to.scss
+++ b/solution/ui/regulations/css/scss/partials/_jump_to.scss
@@ -75,6 +75,9 @@
     }
 
     input {
+        background-color: #FFF;
+        color: #000;
+
         &.submit {
             display: inline-block;
             line-height: 1.3;
