--- a/solution/ui/regulations/css/scss/partials/_flash_banner.scss
+++ b/solution/ui/regulations/css/scss/partials/_flash_banner.scss
@@ -6,6 +6,7 @@
 @import "../application_settings";
 
 .flash-banner {
+    box-sizing: unset;
     display: flex;
     align-items: center;
     justify-content: center;
