--- a/solution/ui/regulations/css/scss/partials/_sidebar_left.scss
+++ b/solution/ui/regulations/css/scss/partials/_sidebar_left.scss
@@ -11,6 +11,7 @@ $toc_toggles_width: 64px;
 // Sidebar
 
 aside.left-sidebar {
+    box-sizing: unset;
     color: $reverse_text_color;
     height: calc(100vh - #{$header-height});
     overflow-y: scroll;
@@ -224,6 +225,7 @@ aside.left-sidebar {
 // Controls (i.e. Collapse)
 
 .toc-controls {
+    box-sizing: border-box;
     border-bottom: 1px solid $secondary_border_color;
 
     button {
@@ -236,6 +238,7 @@ aside.left-sidebar {
         font-weight: 600;
         padding: $spacer-2;
         border-radius: 0;
+        line-height: 1.2;
 
         &:hover,
         &:focus {
