--- a/solution/ui/regulations/css/scss/_application_settings.scss
+++ b/solution/ui/regulations/css/scss/_application_settings.scss
@@ -22,11 +22,9 @@ select {
 }
 
 h2,
-h3,
 h5,
 h6,
-p,
-ul {
+p {
     margin-block-start: 1em !important;
     margin-block-end: 1em !important;
 }
@@ -35,16 +33,8 @@ h2 {
     margin: 0.83em 0 0.83em 0 !important;
 }
 
-h3 {
-    margin: 1em 0 1em 0 !important;
-}
-
 h5 {
     margin: 1.67em 0 1.67em 0 !important;
-}
-
-ul {
-    padding-inline-start: 40px !important;
 }
 
 .v-application {
