refactor: reg text tweaks

--- a/solution/ui/regulations/css/scss/partials/_buttons_and_tooltip.scss
+++ b/solution/ui/regulations/css/scss/partials/_buttons_and_tooltip.scss
@@ -146,7 +146,7 @@
             font-size: $font_size_md;
             line-height: 24px;
             font-weight: 700;
-            margin: 0 0 18px 0;
+            margin: 0 0 18px 0 !important;
         }
     }
 }
