refactor: print style tweaks

--- a/solution/ui/regulations/css/scss/partials/_reg_text.scss
+++ b/solution/ui/regulations/css/scss/partials/_reg_text.scss
@@ -193,7 +193,7 @@
             color: $secondary_text_color;
             font-size: $font-size-md;
             line-height: 1.4;
-            margin-top: 25px;
+            margin-top: 25px !important;
 
             @include screen-xl {
                 font-size: $font-size-lg;
