--- a/solution/ui/regulations/css/scss/_print.scss
+++ b/solution/ui/regulations/css/scss/_print.scss
@@ -193,7 +193,7 @@ $left-right-padding: 40px;
 
             .up-to-date {
                 padding-left: 0px;
-                margin: 22px auto 20px;
+                margin: 22px auto 20px !important;
 
                 &.subpart {
                     font-size: 10px;
@@ -208,15 +208,15 @@ $left-right-padding: 40px;
                     line-height: 1.4;
 
                     p {
-                        margin-block-start: 0;
-                        margin-block-end: 0;
-                        margin-top: 8px;
-                        margin-bottom: 8px;
+                        margin-block-start: 0 !important;
+                        margin-block-end: 0 !important;
+                        margin-top: 8px !important;
+                        margin-bottom: 8px !important;
 
                         @for $i from 1 through 10 {
                             &.depth-#{$i} + .depth-#{$i} {
-                                margin-top: 3px;
-                                margin-bottom: 3px;
+                                margin-top: 3px !important;
+                                margin-bottom: 3px !important;
                             }
                         }
                     }
