style: ensure smooth scroll

--- a/solution/ui/regulations/css/scss/_application_settings.scss
+++ b/solution/ui/regulations/css/scss/_application_settings.scss
@@ -347,7 +347,7 @@ a {
 }
 
 .smooth-scroll {
-    scroll-behavior: smooth;
+    scroll-behavior: smooth !important;
 }
 
 // -------------------------
@@ -411,8 +411,8 @@ a {
     }
 }
 
-html {
-    scroll-behavior: smooth;
+html, body {
+    scroll-behavior: smooth !important;
 }
 
 select {
