test: add quick style to hide django toolbar tab when necessary

--- a/solution/ui/regulations/css/scss/_application_settings.scss
+++ b/solution/ui/regulations/css/scss/_application_settings.scss
@@ -4,7 +4,7 @@
 
 #djDebug #djShowToolBarButton {
     opacity: 1 !important;
-    display: none;
+    //display: none; // use when toolbar tab is causing issues with local cypress tests
 }
 
 // Vuetify overrides
