chore: adjust indicator right margin

--- a/solution/ui/regulations/css/scss/_application_settings.scss
+++ b/solution/ui/regulations/css/scss/_application_settings.scss
@@ -293,7 +293,7 @@ $width-3xl: 1920px; // The largest the site container will get
     font-size: 11px;
     padding: 2px 0;
     border-radius: $border-radius;
-    margin-right: 4px;
+    margin-right: 7px !important;
     display: inline-block;
     width: 42px;
     text-align: center;
