--- a/solution/backend/regulations/templates/regulations/homepage.html
+++ b/solution/backend/regulations/templates/regulations/homepage.html
@@ -25,7 +25,7 @@
 
         <div class="hero-banner">
             <div class="site-container hero-content">
-                {% include "regulations/partials/jump_to.html" with parts=regulations title=cfr_title_number.0 %}
+                <jump-to class="jump-to" apiurl="{% url 'regcore' %}"></jump-to>
                 <p class="hero-text">Explore this site as a supplement to existing policy tools. <a href="{% url 'about' %}#automated-updates">How this tool is updated.</a></p>
             </div>
         </div>
