EREGCSC-1564 Revised Jump-to (#725)
* EREGCSC-1564 Revised Jump-to

* set check of titles to 1

* base url updated

* Hardcode title 42 as only title. Update cypress

* cypress update

* formatting changes

* formatting changes

* formatting fix

* added id's to dropdowns

* ids added to dropdowns

* changed to type for vue, fixed version url

* css changes

--- a/solution/ui/regulations/css/scss/partials/_jump_to.scss
+++ b/solution/ui/regulations/css/scss/partials/_jump_to.scss
@@ -44,7 +44,6 @@
             select,
             input,
             input .submit {
-                margin: 0;
                 height: 36px;
                 font-size: $font-size-sm;
             }
@@ -72,6 +71,8 @@
     .dot {
         font-size: $font-size-2xl;
         line-height: 1;
+        padding-left:4px;
+        padding-right: 4px;;
     }
 
     input {
@@ -107,4 +108,13 @@
         font-weight: 600;
         font-size: $font-size-lg;
     }
+}
+select#jumpToPart,
+input#jumpToSection,
+input#jumpBtn{
+    margin-top: 0px;
+    margin-bottom: 0px;
+}
+input#jumpToSection{
+    margin-right: 12px
 }
