Adjusting gap between h1's

--- a/solution/backend/regulations/templates/regulations/homepage.html
+++ b/solution/backend/regulations/templates/regulations/homepage.html
@@ -38,13 +38,13 @@
                     <div class="toc-container">
 
                         {% for title in structure %}
-
+                            <div class="toc-title-container">
                             <h1> {{title.label}} </h1>
 
                             {% for child in title.children %}
                                 {% render_nested "regulations/homepage/"|add:child.type|add:".html" "regulations/homepage/child.html" context=child title=title.identifier.0 %}
                             {% endfor %}
-
+                        </div>
                         {% endfor %}
 
                     </div>    
