--- a/solution/ui/regulations/css/scss/partials/_site_homepage.scss
+++ b/solution/ui/regulations/css/scss/partials/_site_homepage.scss
@@ -210,6 +210,7 @@
 }
 
 .homepage-main-content {
+    padding-bottom: 16px;
     .ds-l-row {
         @include custom-max(1024) {
             display: block;
@@ -228,7 +229,9 @@
     .toc-container {
         max-width: $text-max-width;
     }
-
+    .toc-title-container{
+        padding-bottom: 16px;
+    }
     h1 {
         margin-top: $spacer-2;
         margin-bottom: 0 !important;
