Use settings.py for api url

--- a/solution/backend/regulations/templates/regulations/cache.html
+++ b/solution/backend/regulations/templates/regulations/cache.html
@@ -13,7 +13,7 @@
 {% block header %}{% endblock %}
 
 {% block body %}
-    <div id="vite-app" data-api-url="{% url 'regcore' %}"></div>
+    <div id="vite-app" data-api-url="{{ API_BASE }}"></div>
 {% endblock %}
 
 {% block footer %}
