--- a/solution/backend/regulations/templates/regulations/partials/jump_to.html
+++ b/solution/backend/regulations/templates/regulations/partials/jump_to.html
@@ -1,5 +1,5 @@
 <div class="jump-to">
 
-    <jump-to part="{{ part }}" title="{{title}}" apiurl="{% url 'regcore' %}"></jump-to>
+    <jump-to part="{{ part }}" title="{{title}}" apiurl="{{ API_BASE }}"></jump-to>
 
 </div>
