--- a/solution/backend/regulations/templates/regulations/partials/recent_changes.html
+++ b/solution/backend/regulations/templates/regulations/partials/recent_changes.html
@@ -6,7 +6,7 @@
 
     <p class="recent-rules-descriptive-text">Includes 42 CFR 400, 430-460</p>
 
-    <recent-changes-container api-url={% url "regcore" %} ></recent-changes-container>
+    <recent-changes-container api-url={{ API_BASE }} ></recent-changes-container>
 
     <a href="{% url 'resources' %}?title=42&resourceCategory={{ fr_docs_category_name }}" class="action-btn default-btn link-btn view-more-changes-btn">View More Changes</a>
 
