--- a/solution/backend/regulations/templates/regulations/resources.html
+++ b/solution/backend/regulations/templates/regulations/resources.html
@@ -18,7 +18,7 @@
 {% block body %}
 <div
     id="vite-app"
-    data-api-url="{% url 'regcore' %}"
+    data-api-url="{{ API_BASE }}"
     data-about-url="{% url 'about' %}"
     data-custom-url="{{ CUSTOM_URL }}"
     data-host="{{ host }}"
