feat: first pass at new vue header component and brand style

--- a/solution/backend/regulations/templates/regulations/homepage.html
+++ b/solution/backend/regulations/templates/regulations/homepage.html
@@ -11,9 +11,7 @@
 {% endblock %}
 
 {% block header %}
-    <header id="header" class="sticky">
-        {% include "regulations/partials/header.html" %}
-    </header>
+    <header-component></header-component>
 {% endblock %}
 
 {% block body %}
