feat: add header to all pages; refactor modal/flashbanner

--- a/solution/backend/regulations/templates/regulations/resources.html
+++ b/solution/backend/regulations/templates/regulations/resources.html
@@ -15,6 +15,9 @@
     <a class="ds-c-skip-nav" href="#main-content">Skip to main content</a>
 {% endblock %}
 
+{% block header %}
+{% endblock %}
+
 {% block body %}
 <div
     id="vite-app"
