--- a/solution/backend/regulations/templates/regulations/search.html
+++ b/solution/backend/regulations/templates/regulations/search.html
@@ -17,6 +17,9 @@
     <a class="ds-c-skip-nav" href="#main-content">Skip to main content</a>
 {% endblock %}
 
+{% block header %}
+{% endblock %}
+
 {% block body %}
 <div
     id="vite-app"
