--- a/solution/backend/regulations/templates/regulations/base.html
+++ b/solution/backend/regulations/templates/regulations/base.html
@@ -56,7 +56,9 @@ CSS/Javascript etc., should inherit from this template.
                 {% endblock %}
 
                 {% block header %}
-                    <header-component></header-component>
+                    <header id="header" class="sticky">
+                        <header-component></header-component>
+                    </header>
                 {% endblock %}
 
                 {% block body %}{% endblock %}
