feat: eregs design system specific vars, responsive styling

--- a/solution/backend/regulations/templates/regulations/base.html
+++ b/solution/backend/regulations/templates/regulations/base.html
@@ -52,7 +52,9 @@ CSS/Javascript etc., should inherit from this template.
                 {% include "../browser_not_supported.html" %}
 
                 {% block flash_banner %}
-                    <flash-banner></flash-banner>
+                    <div class="banner--container">
+                        <flash-banner></flash-banner>
+                    </div>
                 {% endblock %}
 
                 {% block header %}
