--- a/solution/ui/regulations/css/scss/partials/_flash_banner.scss
+++ b/solution/ui/regulations/css/scss/partials/_flash_banner.scss
@@ -5,6 +5,10 @@
 
 @import "../application_settings";
 
+.banner--container {
+    min-height: 34px;
+}
+
 .flash-banner {
     box-sizing: unset;
     display: flex;
