--- a/solution/ui/regulations/css/scss/partials/_compare.scss
+++ b/solution/ui/regulations/css/scss/partials/_compare.scss
@@ -12,7 +12,7 @@
 
     top: $header_height_mobile;
 
-    @include custom-min(781) {
+    @include custom-min($eds-width-sm / 1px) {
         top: $header_height;
     }
 
